bug, visualizacion mobile

--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -8,8 +8,6 @@
     width:100%;
     min-height:40vw;
     overflow: hidden;
-	display: block;
-       @include media-queries(small) {display: none;}
   }
   
   .layer{
@@ -120,6 +118,7 @@
   }
 
   #wrapper{
+	display: none;
 	@include media-queries(extra-small) {
      display: none;
     }
